--- a/content/blog/get-running-with-apache-flink-on-kubernetes-2.asciidoc
+++ b/content/blog/get-running-with-apache-flink-on-kubernetes-2.asciidoc
@@ -1,7 +1,7 @@
 ---
 title: 'Get Running with Apache Flink on Kubernetes, part 2 of 2'
 date: "2025-01-28T00:00:00+00:00"
-draft: true
+draft: false
 markup: adoc
 canonical_url: https://www.decodable.co/blog/get-running-with-apache-flink-on-kubernetes-2
 tags:
