--- a/content/blog/cdc-use-cases.asciidoc
+++ b/content/blog/cdc-use-cases.asciidoc
@@ -1,7 +1,7 @@
 ---
 title: 'CDC Use Cases: 7 Ways to Put CDC to Work'
 date: "2023-11-02T00:00:00+00:00"
-draft: true
+draft: false
 markup: adoc
 canonical_url: https://www.decodable.co/blog/cdc-use-cases
 tags:
@@ -18,7 +18,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/cdc-use-cases[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/cdc-use-cases[Decodable blog]. All rights reserved._
 
 Change Data Capture (CDC) is a powerful tool in data engineering and has seen a tremendous uptake in organizations of all kinds over the last few years.
 This is because it enables the tight integration of transactional databases into many other systems in your business at a very low latency.
