--- a/content/blog/checkpoint-chronicle-april-2024.asciidoc
+++ b/content/blog/checkpoint-chronicle-april-2024.asciidoc
@@ -18,7 +18,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-april-2024[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/checkpoint-chronicle-april-2024[Decodable blog]. All rights reserved._
 
 Welcome to the _Checkpoint Chronicle_, a monthly roundup of interesting stuff in the data and streaming space.
 Your hosts and esteemed curators of said content are link:https://twitter.com/gunnarmorling?lang=en[Gunnar Morling] (your editor-in-chief for this edition) and link:https://twitter.com/rmoff/[Robin Moffatt].
