--- a/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.asciidoc
+++ b/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.asciidoc
@@ -16,7 +16,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/your-first-apache-flink-job[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/your-first-apache-flink-job[Decodable blog]. All rights reserved._
 
 A question often brought up by potential Decodable customers as they are exploring the product is how our service for building real-time ETL applications--which is based on Apache Flink--differs from other offerings in the space, and in particular link:https://aws.amazon.com/managed-service-apache-flink/[Amazon's Managed Service for Apache Flink] (MSF).
 There are similarities, but also key differences, so this is more than a fair question.
