--- a/content/blog/denormalizing-change-event-streams-for-document-stores.asciidoc
+++ b/content/blog/denormalizing-change-event-streams-for-document-stores.asciidoc
@@ -18,7 +18,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/denormalizing-change-event-streams-for-document-stores[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/denormalizing-change-event-streams-for-document-stores[Decodable blog]. All rights reserved._
 
 A very common data movement use case we're seeing at Decodable is taking data from operational databases (Postgres, MySQL, etc.) to dedicated stores for full-text search and analytics, such as Elasticsearch or OpenSearch.
 These systems are highly optimized for running query workloads against massive amounts of data by scaling out to multiple compute nodes in a cluster.
