--- a/content/blog/get-running-with-apache-flink-on-kubernetes-1.asciidoc
+++ b/content/blog/get-running-with-apache-flink-on-kubernetes-1.asciidoc
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/get-running-with-apache-flink-on-kubernetes-1[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/get-running-with-apache-flink-on-kubernetes-1[Decodable blog]. All rights reserved._
 
 Kubernetes is a widely used deployment platform for Apache Flink.
 While Flink has had native support for Kubernetes for quite a while, it is in particular the operator pattern which makes deploying Flink jobs onto Kubernetes clusters a compelling option: you define jobs in a declarative resource, and a control loop running in a component called a Kubernetes operator takes care of provisioning and maintaining (e.g.
