--- a/content/blog/get-running-with-apache-flink-on-kubernetes-2.asciidoc
+++ b/content/blog/get-running-with-apache-flink-on-kubernetes-2.asciidoc
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/get-running-with-apache-flink-on-kubernetes-2[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/get-running-with-apache-flink-on-kubernetes-2[Decodable blog]. All rights reserved._
 
 Welcome back to this two-part blog post series about running Apache Flink on Kubernetes, using the Flink Kubernetes operator.
 In link:/blog/get-running-with-apache-flink-on-kubernetes-1[part one], we discussed installation and setup of the operator, different deployment types, how to deploy Flink jobs using custom Kubernetes resources, and how to create container images for your own Flink jobs.
