--- a/content/blog/introducing-support-for-the-apache-flink-web-ui.asciidoc
+++ b/content/blog/introducing-support-for-the-apache-flink-web-ui.asciidoc
@@ -16,7 +16,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/introducing-support-for-the-apache-flink-web-ui[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/introducing-support-for-the-apache-flink-web-ui[Decodable blog]. All rights reserved._
 
 It's my great pleasure to announce that you can now access the Apache Flink web user interface through Decodable's Custom Pipeline feature!
 In this blog post, I'll show you how to use the Apache Flink web UI to monitor your custom pipelines and also go through some recent improvements to the Decodable SDK for Custom Pipelines.
