--- a/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.asciidoc
+++ b/content/blog/introducing-the-decodable-sdk-for-custom-pipelines.asciidoc
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/introducing-the-decodable-sdk-for-custom-pipelines[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/introducing-the-decodable-sdk-for-custom-pipelines[Decodable blog]. All rights reserved._
 
 Today it's my great pleasure to announce the first release of a software development kit (SDK) for Decodable Custom Pipelines!
 This SDK helps you to build custom Apache Flink® jobs, tightly integrated with managed streams and connectors of the Decodable platform.
