--- a/content/blog/logical-replication-from-postgres-stand-by-servers-debezium-and-failover-slots.asciidoc
+++ b/content/blog/logical-replication-from-postgres-stand-by-servers-debezium-and-failover-slots.asciidoc
@@ -1,7 +1,7 @@
 ---
 title: 'Logical Replication From Postgres 16 Stand-By Servers—Debezium and Failover Slots'
 date: "2023-12-19T00:00:00+00:00"
-draft: true
+draft: false
 markup: adoc
 canonical_url: https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2
 tags:
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/logical-replication-from-postgres-16-stand-by-servers-part-2-of-2[Decodable blog]. All rights reserved._
 
 Welcome back to this series about logical replication from Postgres 16 stand-by servers, in which we'll discuss how to use this feature with Debezium—a popular open-source platform for Change Data Capture (CDC) for a wide range of databases—as well as how to manage logical replication in case of failover scenarios, i.e.
 a situation where your primary Postgres server becomes unavailable and a stand-by server needs to take over.
