--- a/content/blog/meet-the-decodable-crew-at-kafka-summit-london-2024.asciidoc
+++ b/content/blog/meet-the-decodable-crew-at-kafka-summit-london-2024.asciidoc
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/meet-decodable-at-kafka-summit-london-2024[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/meet-decodable-at-kafka-summit-london-2024[Decodable blog]. All rights reserved._
 
 It's just a few more days until one of the key events of the year in the data streaming space: link:https://www.kafka-summit.org/events/kafka-summit-london-2024/about[Kafka Summit London]!
 Of course we wouldn't miss this opportunity for meeting the data community, talking about the latest developments and product news here at Decodable, learning about your requirements, and exchanging with all you data practitioners at large.
