--- a/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.asciidoc
+++ b/content/blog/postgres-15-logical-decoding-row-filters-with-debezium.asciidoc
@@ -1,7 +1,7 @@
 ---
 title: 'Postgres 15: Logical Decoding Row Filters With Debezium'
 date: "2022-12-15T00:00:00+00:00"
-draft: true
+draft: false
 markup: adoc
 canonical_url: https://www.decodable.co/blog/postgres-15-logical-decoding-row-filters-with-debezium
 tags:
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/postgres-15-logical-decoding-row-filters-with-debezium[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/postgres-15-logical-decoding-row-filters-with-debezium[Decodable blog]. All rights reserved._
 
 Since link:https://www.postgresql.org/docs/current/logicaldecoding-explanation.html[logical decoding] was added to Postgres in version 9.4, this powerful feature for capturing changes from the write-ahead log of the database has been continuously improved.
 link:https://www.postgresql.org/about/news/postgresql-15-released-2526/[Postgres 15], released in October this year, added support for fine-grained control over which columns (by means of _column lists_) and rows (via _row filters_) should be exported from captured tables.
