--- a/content/blog/processing-github-webhooks-with-decodable.asciidoc
+++ b/content/blog/processing-github-webhooks-with-decodable.asciidoc
@@ -16,7 +16,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/processing-github-webhooks-with-decodable[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/processing-github-webhooks-with-decodable[Decodable blog]. All rights reserved._
 
 Recently, a Decodable user reached out to me with a riveting question: how to process GitHub webhooks with the Decodable REST source connector?
 link:https://docs.github.com/en/webhooks/about-webhooks[Webhooks] let you react to all kinds of events on the GitHub platform, such as when a pull request is opened, a release is performed, or a comment is added to a discussion.
