--- a/content/blog/seven-must-see-talks-at-current-2024.asciidoc
+++ b/content/blog/seven-must-see-talks-at-current-2024.asciidoc
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/seven-must-see-talks-at-current-2024[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/seven-must-see-talks-at-current-2024[Decodable blog]. All rights reserved._
 
 It's just two more weeks until link:https://current.confluent.io/[Current ‘24]!
 Organized by the fine folks over at Confluent, it's _the_ event of the year in the data streaming and processing space.
