--- a/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.asciidoc
+++ b/content/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable.asciidoc
@@ -16,7 +16,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/support-for-running-your-own-apache-flink-jobs-is-coming-to-decodable[Decodable blog]. All rights reserved._
 
 It's my great pleasure to announce a major new feature of the Decodable platform: support for running your own custom Apache Flink® jobs, written in any JVM-based programming language such as Java or Scala.
 This takes the Decodable managed service experience to a completely new level, and I couldn't be more excited about finally seeing this feature out in the wild!
