--- a/content/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc.asciidoc
+++ b/content/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc.asciidoc
@@ -18,7 +18,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc[Decodable blog]. All rights reserved._
 
 _This article originally appeared at_ link:https://www.infoq.com/articles/wonders-of-postgres-logical-decoding-messages/[InfoQ] _._
 
