--- a/content/blog/failover-replication-slots-with-postgres-17.asciidoc
+++ b/content/blog/failover-replication-slots-with-postgres-17.asciidoc
@@ -1,7 +1,7 @@
 ---
 title: 'Failover Replication Slots with Postgres 17'
 date: "2024-12-03T00:00:00+00:00"
-draft: true
+draft: false
 markup: adoc
 canonical_url: https://www.decodable.co/blog/failover-replication-slots-with-postgres-17
 tags:
@@ -17,7 +17,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/failover-replication-slots-with-postgres-17[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/failover-replication-slots-with-postgres-17[Decodable blog]. All rights reserved._
 
 Postgres read replicas are commonly used not only to distribute query load amongst multiple nodes, but also to ensure high availability (HA) of the database.
 If the primary node of a Postgres cluster fails, a read replica can be promoted to be the new primary, processing write (and read) requests from thereon.
