--- a/content/blog/revisiting-the-outbox-pattern.asciidoc
+++ b/content/blog/revisiting-the-outbox-pattern.asciidoc
@@ -1,7 +1,7 @@
 ---
 title: 'Revisiting the Outbox Pattern'
 date: "2024-10-31T00:00:00+00:00"
-draft: true
+draft: false
 markup: adoc
 canonical_url: https://www.decodable.co/blog/revisiting-the-outbox-pattern
 tags:
@@ -18,7 +18,7 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
-_This post originally appeared on the link:https://www.decodable.co/blog/revisiting-the-outbox-pattern[Decodable blog]._
+_This post originally appeared on the link:https://www.decodable.co/blog/revisiting-the-outbox-pattern[Decodable blog]. All rights reserved._
 
 Over the last few years, the outbox pattern has become a common solution for implementing data exchange flows between microservices.
 It allows services to safely and reliably update their own local datastore and at the same time send out notifications to other services via data streaming platforms such as Apache Kafka.
@@ -30,7 +30,7 @@ It's time to take another look at the outbox pattern, what it is and how to impl
 == Recap: What's The Outbox Pattern?
 _Congrats!_
 _You've landed that job as a software engineer at Oh-my-Dawg, the nation's latest and hottest franchise in beauty care for our four-pawed friends._
-_Pedicure for poodles, lathering for labradors, grooming for greyhounds—there's a lot of money to be made in this business, and your task is gonna be to build robust and reliable backend systems for that._
+_Pedicure for poodles, lathering for labradors, grooming for greyhounds--there's a lot of money to be made in this business, and your task is gonna be to build robust and reliable backend systems for that._
 
 Let's look at one of the business processes, the creation of appointments for a treatment, and how it could be implemented.
 Oh-my-Dawg runs a microservices architecture, with one service for managing appointments, and another one for managing inventory.
@@ -42,7 +42,7 @@ To decouple the two services, the notification is sent via link:/kafka[Apache Ka
 .The Oh-my-Dawg microservices architecture
 image::outbox-pattern-1.webp[]
 
-Now, it is vital that these two operations, updating the appointment database and sending the notification, happen link:/blog/aggregating-change-data-capture-events-based-on-transactional-boundaries[atomically—that is, they either both happen, or neither of them does].
+Now, it is vital that these two operations, updating the appointment database and sending the notification, happen link:/blog/aggregating-change-data-capture-events-based-on-transactional-boundaries[atomically--that is, they either both happen, or neither of them does].
 Otherwise, the overall state of the system would be inconsistent:
 
 * If the database transaction commits but the inventory notification isn't sent, we'd end up without shampoo for the appointment. Our furry customers won't be happy!
@@ -79,11 +79,11 @@ For one, it can be resource-intensive, creating spikes of high load on the datab
 There's a natural conflict between achieving low latency and not overwhelming the database due to polling too frequently.
 
 The biggest challenge of this approach though, as link:https://x.com/martinkl/status/1349099872897658880[pointed out] by Martin Kleppmann, are its poor ordering semantics.
-If there are multiple transactions running in parallel, and each one emits an outbox message, it can't be guaranteed that the order of messages in the outbox table—e.g., link:/blog/understanding-apache-flink-event-time-and-watermarks[designated by timestamps] or a sequence field—is the same as the order of commits.
+If there are multiple transactions running in parallel, and each one emits an outbox message, it can't be guaranteed that the order of messages in the outbox table--e.g., link:/blog/understanding-apache-flink-event-time-and-watermarks[designated by timestamps] or a sequence field--is the same as the order of commits.
 This can have severe implications.
-When not being very careful, it can cause the relay to miss outbox messages, providing consumers with an incomplete feed of events (Oskar Dudycz does a great job in link:https://event-driven.io/en/ordering_in_postgres_outbox/[explaining the problem and describing one potential solution]; the basic idea is to consider an outbox event only once there are no more transactions running which are older than the one emitting the outbox event)._
-_But this also means that there can be inconsistencies between the state of the writing service's local database and the external state as represented by its published messages._
-_While serialization may be enforced in some cases, for instance using optimistic locking on a specific record, the problem can't be solved generically in the presence of concurrent writers.
+When not being very careful, it can cause the relay to miss outbox messages, providing consumers with an incomplete feed of events (Oskar Dudycz does a great job in link:https://event-driven.io/en/ordering_in_postgres_outbox/[explaining the problem and describing one potential solution]; the basic idea is to consider an outbox event only once there are no more transactions running which are older than the one emitting the outbox event).
+But this also means that there can be inconsistencies between the state of the writing service's local database and the external state as represented by its published messages.
+While serialization may be enforced in some cases, for instance using optimistic locking on a specific record, the problem can't be solved generically in the presence of concurrent writers.
 
 A much better solution is to retrieve link:/blog/why-do-i-need-cdc#the-best-way-to-do-cdc-is-log-based-cdc[the outbox events via log-based CDC].
 By tailing the database's transaction log (e.g.
@@ -94,7 +94,7 @@ It should be the preferred option whenever possible.
 
 === The Outbox Table
 At the center of the outbox pattern is a table for storing the outbox events.
-The writing service—such as the appointment service in the Oh-my-Dawg example—only ever makes inserts into this table, but it never updates.
+The writing service--such as the appointment service in the Oh-my-Dawg example--only ever makes inserts into this table, but it never updates.
 Existing events are immutable and cannot be altered after the fact.
 In that sense, the outbox table represents an append-only log, not unlike the actual transaction log of the database itself.
 
@@ -123,7 +123,7 @@ This mitigates at least in parts the concern about storage overhead that is occa
 
 === pg_logical_emit_message()
 What if, instead of implementing what is, in effect, an append-only log in a custom table, you could just use the database's actual transaction log itself for relaying outbox events?
-Turns out you can—at least with Postgres!
+Turns out you can--at least with Postgres!
 
 Through its function `pg_logical_emit_message()`, Postgres lets you write arbitrary messages to the WAL.
 This is exactly what you need for the outbox pattern: instead of inserting the outbox messages into a dedicated table, you just store them in the transaction log by means of a simple function call:
@@ -167,7 +167,7 @@ That way, the data producer can evolve the schema without having to synchronize 
 
 As for a physical message format, JSON continues to be a popular choice.
 It is verbose though, so you may consider using compression, or working with a binary format such as Apache Avro or Google Protocol Buffers instead.
-With the latter option it can be interesting— instead of connecting to a schema registry from within the writing service—to use a registryless serializer.
+With the latter option it can be interesting--instead of connecting to a schema registry from within the writing service--to use a registryless serializer.
 As schemas won't change while a service is running, they can be statically defined at build time.
 That way, there's no runtime dependency from the application to a schema registry and thus one less failure point on the synchronous request processing path.
 If required, schemas can still be published to a registry (for instance, the link:https://docs.confluent.io/platform/current/schema-registry/index.html[Confluent schema registry], or link:https://www.apicur.io/[Apicurio]) via a CI/CD pipeline when deploying a new version of the source microservice, making them available for discovery and consumption by downstream processes.
@@ -182,8 +182,8 @@ Let's assume Oh-my-Dawg has been operating for a while already, and only now the
 So you adjust the appointment service to use the outbox pattern for that purpose, but how do you emit messages describing the appointments already existing in the database at this point?
 Or maybe disaster has struck, and you've lost the topic with appointment events on the Kafka cluster so now your inventory is going to be out of sync.
 
-One solution to this is to use the same machinery and communication channel—i.e.
-outbox, CDC, Kafka—and emit backfill events which essentially describe the current state of the data.
+One solution to this is to use the same machinery and communication channel--i.e.
+outbox, CDC, Kafka--and emit backfill events which essentially describe the current state of the data.
 This is relatively easy if there are no concurrent writes.
 At Oh-my-Dawg, you'd scan the existing dataset and insert an event for each existing appointment into the outbox table.
 Unfortunately, in a live production system you usually won't have the luxury of exclusive write access.
@@ -213,7 +213,7 @@ Otherwise, we might end up allocating too much inventory, say two portions of sh
 The challenge is that these kinds of data pipelines have at-least-once semantics typically.
 If, for instance, the CDC process crashes after emitting an event to Kafka, but before acknowledging that event as consumed with the source database, it will be emitted a second time after restarting.
 
-One option for detecting—and discarding—such duplicates, is adding a unique identifier to each event, such as a UUID.
+One option for detecting--and discarding--such duplicates, is adding a unique identifier to each event, such as a UUID.
 Consumers keep track of the UUIDs of the events they have processed successfully, for instance by storing them in a journal table in their database.
 When an event comes in, they check whether they've seen its UUID before, and if so ignore that duplicate event.
 The problem though is: for how long should a consumer keep these UUIDs before removing them from its journal?
@@ -256,7 +256,7 @@ The complexity argument needs consideration from two different angles: an extern
 From the external perspective, you're looking at things such as the overall number of moving parts of the solution as well as their interactions.
 In a microservices architecture, there'll be a database for each service and a streaming platform for inter-service messaging in any case.
 When implementing the outbox pattern, you'll also need the outbox relay.
-If you don't do CDC yet, adding a system like Debezium—for instance by standing up a Kafka Connect cluster—for this purpose will add one more component indeed.
+If you don't do CDC yet, adding a system like Debezium--for instance by standing up a Kafka Connect cluster--for this purpose will add one more component indeed.
 This component needs to be operated, updated, kept secure, etc.
 On the other hand, chances are you link:https://www.decodable.co/blog/why-do-i-need-cdc[need CDC anyways], in which case configuring it for also capturing outbox events doesn't change the consideration much.
 Another option can be to run the outbox relay within the writing service yourself: via its embedded engine, Debezium can be used link:https://www.decodable.co/blog/understanding-cdc-with-debezium-server-and-debezium-engine[as a library in Java-based applications], thus avoiding the need for running the outbox relay in a separate process.
@@ -322,7 +322,7 @@ In link:https://docs.dapr.io/developing-applications/building-blocks/state-manag
 If that succeeds, it updates the local state, also writing an identifier of that previously sent message.
 
 A separate Dapr process reads from the internal topic and looks for the identifier in the state store.
-If present, it re-publishes the message on a user-facing topic—from where it can be read by the consuming service—and removes the identifier from the state store.
+If present, it re-publishes the message on a user-facing topic--from where it can be read by the consuming service--and removes the identifier from the state store.
 If the message identifier cannot be found in the state store, this indicates that the state store update failed and the internal Pub/Sub message will not be propagated.
 
 The advantage is that the outbox event doesn't have to be written to the state store, addressing the overhead concern discussed above.
@@ -340,13 +340,13 @@ This provides the same characteristics in terms of availability and consistency 
 The downside of this approach is that there are no synchronous read-your-own-write guarantees.
 As consumption via Kafka is asynchronous, it is not guaranteed that a service will be able to retrieve a record from the data store right after it has been published to Kafka.
 This can make for confusing user experiences, if for instance a user can't see their appointment right after creating it.
-Also other tasks which are trivial when writing to a database first—such as enforcing unique constraints—are becoming challenging with this approach.
+Also other tasks which are trivial when writing to a database first--such as enforcing unique constraints--are becoming challenging with this approach.
 While some techniques for mitigation exist, it's not an approach I'd recommend due to the inherent complexities.
 
 
 === Stream Processing on "Raw" Change Event Streams
 Another alternative is to use change data capture not for an outbox table, but for the actual data tables of the service itself, such as the "Appointment" table in the Oh-my-Dawg example.
-Exposing these change event streams across service—and team—boundaries can be problematic, as it exposes a service's internal data model and its structure to external consumers.
+Exposing these change event streams across service--and team--boundaries can be problematic, as it exposes a service's internal data model and its structure to external consumers.
 In particular when it comes to changes to the data schema, this can cause friction and disruption.
 Stream processing, for instance via Apache Flink or Kafka Streams, can be a way out, establishing consciously crafted link:https://current.confluent.io/2024-sessions/data-contracts-in-practice-with-debezium-and-apache-flink[data contracts] between the providing service and event consumers.
 With tools like Flink SQL, you can apply data transformations for shaping the published events, limit which events get published, create denormalized events by joining multiple change event streams, and much more.
@@ -359,8 +359,8 @@ The big advantage of this over the outbox pattern is that no code changes to the
 Also there is no impact on the source database, as it only contains the actual data tables and nothing more.
 The shaping of published events sent to other services happens completely asynchronously.
 The downside is that you need to add a stream processing solution to the overall architecture (though managed services can help navigate this complexity), and stream processing has a learning curve on its own.
-Establishing transactional semantics—i.e.
-emitting a derived public event only once all relevant events from a source transaction have been processed—can be a challenging task, too.
+Establishing transactional semantics--i.e.
+emitting a derived public event only once all relevant events from a source transaction have been processed--can be a challenging task, too.
 With the outbox pattern, which emits messages in the context of transactions in the source database, this comes for free.
 
 
@@ -372,7 +372,7 @@ If you are using messaging infrastructure like a good ol' JMS broker which suppo
 
 So it should be good news then that something similar will be possible with Kafka soon, as the Kafka community currently is working on link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-939:+Support+Participation+in+2PC[KIP-939] ("Support Participation in 2PC").
 But in my opinion, this KIP won't render the outbox pattern obsolete; the reason being the implications on service availability.
-With the outbox pattern, a service only needs a single resource to be available in order to process an incoming request—its own database.
+With the outbox pattern, a service only needs a single resource to be available in order to process an incoming request--its own database.
 Whereas with 2PC, it needs two resources, the database and the Kafka cluster, which means that the service's overall availability actually is lower.
 
 Also, there usually isn't a good reason in the first place to make the process of emitting a notification to external services part of the synchronous call flow.
@@ -388,7 +388,7 @@ In a nutshell, they provide a form of persistent continuations, transparently re
 
 There has been a fair amount of buzz around these solutions lately and their promise of drastically simplifying the creation of robust and fault-tolerant distributed workflows.
 Whether they'll gain widespread adoption in the industry remains to be seen at this point.
-In particular the requirement to implement workflows using particular SDKs—potentially creating a lock-in effect—and the need for framework-specific execution runtimes such as the Temporal Service or the Restate server, typically with bespoke state store implementations, may pose a challenge for proliferation.
+In particular the requirement to implement workflows using particular SDKs--potentially creating a lock-in effect--and the need for framework-specific execution runtimes such as the Temporal Service or the Restate server, typically with bespoke state store implementations, may pose a challenge for proliferation.
 But if they manage to live up to their promise, they may free developers from having to deal with details such as outboxes, retries, etc.
 
 
